# useless-bot

./: CMakeLists.txt  bot.py  config.sh  useless-bot.cpp
