cmake_minimum_required (VERSION 3.6)
project(UselessBot)

FIND_PACKAGE(PythonInterp 3)
FIND_PACKAGE(PythonLibs 3 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS python)

message(STATUS "PYTHON_LIBRARIES = ${PYTHON_LIBRARIES}")
message(STATUS "PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
message(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
message(STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES}) #FIXME

PYTHON_ADD_MODULE(useless_bot useless-bot.cpp)
FILE(COPY requirements.txt DESTINATION .)
FILE(COPY bot.py DESTINATION .)
#FILE(COPY discord_api DESTINATION .)